--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!-- For Android 9 and below -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:name=".MyApplication"
+        android:theme="@style/Theme.AppCompat.Light"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -10,7 +21,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NEInvoice"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
         <!-- Main Activity -->
@@ -23,10 +34,34 @@
             </intent-filter>
         </activity>
 
-        <!-- Customer List Activity -->
-        <activity
-            android:name=".CustomerListActivity"
+        <!-- Other Activities -->
+        <activity android:name=".CustomerListActivity"
             android:exported="true" />
+        <activity android:name=".OjogiDriveActivity"
+            android:exported="true"
+            android:label="Ojogi Drive" />
+        <activity android:name=".PromiseActivity"
+            android:exported="true"
+            android:label="Promise" />
+        <activity android:name=".VantageActivity"
+            android:exported="true"
+            android:label="Vantage" />
+        <activity android:name=".ThornGrooveActivity"
+            android:exported="true"
+            android:label="ThornGroove" />
+
+        <!-- FileProvider (Moved inside <application>) -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
     </application>
 
 </manifest>
+
